# YadQt

./: .gitignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  remakesourcelist  yadqt.mpz
PrivateDevFiles/: MakeYadQTAppImage
YadQt/: flagsandlibs
YadQt/app/: Makefile.am
YadQt/resources/applications/: YadQt.desktop  yadqtcolour.desktop
YadQt/resources/examples/: bashprefs-2.sh  bashprefs.sh  bashprefslive.sh  bashprefstabbed.sh  exampleprefs.data  globalapps  localapps  screenshooter.sh  screenshoter.sh  shooter.data  traydata  trayexample.sh  yadqtcolour.desktop
YadQt/resources/help/: yadqt.html
YadQt/resources/icons/yadqticons/: index.theme
YadQt/resources/man/: yadqt.1
YadQt/resources/pixmaps/: YadQt.desktop
YadQt/src/: DataClass.cpp  DataClass.h  FilesClass.cpp  FilesClass.h  FormsClass.cpp  FormsClass.h  InfoBoxClass.cpp  InfoBoxClass.h  InputDialogsClass.cpp  InputDialogsClass.h  ListBoxClass.cpp  ListBoxClass.h  OrphanDialogClass.cpp  OrphanDialogClass.h  QT_InfoBoxClass.cpp  QT_InfoBoxClass.h  globals.h  main.cpp  prefsClass.cpp  prefsClass.h
